@@ -25,7 +25,7 @@ class ActionBackupDB extends BufferedAction {
   /**
   * Initialising the class 
   * 
-  * @param  BumbleBeeAuth $auth  Authorisation object
+  * @param  BumblebeeAuth $auth  Authorisation object
   * @param  array $pdata   extra state data from the call path
   * @return void nothing
   */
