@@ -42,7 +42,7 @@ class ActionBilling extends ActionExport {
   /**
   * Initialising the class 
   * 
-  * @param  BumbleBeeAuth $auth  Authorisation object
+  * @param  BumblebeeAuth $auth  Authorisation object
   * @param  array $pdata   extra state data from the call path
   * @return void nothing
   */
