@@ -27,7 +27,7 @@ class ActionPassword extends ActionAction {
   /**
   * Initialising the class 
   * 
-  * @param  BumbleBeeAuth $auth  Authorisation object
+  * @param  BumblebeeAuth $auth  Authorisation object
   * @param  array $pdata   extra state data from the call path
   * @return void nothing
   */
