@@ -3,6 +3,7 @@
 	  (gave 18% improvement in page load time for monthly calendar)
 	* only calculate string representations of dates and times when required and 
 	  cache result (gave 6% improvement in page load time for monthly calendar)
+	* s/BumbleBee/Bumblebee/ for consistency across project
 
 2006-04-11 Stuart Prescott <stuart.prescott@bristol.ac.uk>
 	* added flat file logging function 
